Implement new API endpoints for Neo4j and GraphQL
Also replaced executionId with recordId to identify execution data
